# diff-app

./: .gitignore  README.md  main.py  nohup.out  pyproject.toml
app/: app_factory.py
app/api/: demo.py  generate.py  schemas.py
app/core/: config.py  security.py
app/models/: segmentation.py
app/pipeline/: editors.py  generator.py  naturalness.py
app/research/: trace.py
demo/: index.html  result.html
demo/assets/: result-v2.js  result.js  style.css
docs/: .$architecture_ja_presentation.drawio.bkp  architecture.drawio  architecture_ja_presentation.drawio  deep-research-report.md  使用技術一覧.md  処理概要フローチャート.drawio  実装計画.md  画像生成AIとi2i比較.md  研究アーキテクチャ提案.md  研究成果発表_スライドトピック整理.md  自然性分析レポート.md  要件定義.md
evaluation/free_images/: source_manifest.json
evaluation/free_images/outputs/: index.json
evaluation/free_images/outputs/free_01/: metadata.json
evaluation/free_images/outputs/free_02/: metadata.json
evaluation/free_images/outputs/free_03/: metadata.json
evaluation/free_images/outputs/free_04/: metadata.json
evaluation/free_images/outputs/free_05/: metadata.json
experiment/: ablation_case.py  ablation_results.csv  ablation_results_smoke.csv  deeplabv3plus_experiment.py  large_scale_evaluation.py  naturalness_benchmark.py  run_ablation.py
experiments/20260320/: 20260320T073742Z-12bc39cb.json
experiments/20260320/20260320T075127Z-38056a75/: params.json  trace.json
experiments/20260320/20260320T075152Z-50eebed1/: params.json  trace.json
experiments/20260320/20260320T075203Z-52962498/: params.json  trace.json
